src/app/components/card/card.component.scss
.todo {
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 50vw;
    margin: 10px auto;
    padding: 5px 15px;
    h3 {
        color: #66153e;
    }
    box-shadow: 0 0 10px #d0a4a9;
    background: #fff;
    button {
        background-color: #ffc6dc;
        border: 0;
        border-radius: 30px;
        padding: 7px 12px;
        color: #66153e;
        font-family: Raleway;
        align-self: center;
        cursor: pointer;
        text-shadow: 0 0 10px #d23f8a;
    }
    button:active{
        transform: scale(.9);
    }
    button:focus, input:focus, textarea:focus {
        box-shadow: 0 0 7px #e4a6da;
        outline: none;
    }
}
.is-completed {
    opacity: .6;
}
input[type=checkbox] {
    position: relative;
      cursor: pointer;
}
input[type=checkbox]:before {
    content: "";
    display: block;
    position: absolute;
    width: 16px;
    height: 16px;
    top: 0;
    left: 0;
    box-shadow: 0 0 4px #fe89c5;
    background-color: #ffc5dc;
}
input[type=checkbox]:checked:after {
    content: "";
    display: block;
    width: 5px;
    height: 10px;
    border: solid #791564;
    border-width: 0 1px 1px 0;
    -webkit-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    transform: rotate(45deg);
    position: absolute;
    top: 1px;
    left: 5px;
}

